acf: Fix blog post component buttons getting cut off on hover

--- a/assets/sass/acf/_flexible-content.scss
+++ b/assets/sass/acf/_flexible-content.scss
@@ -1,7 +1,6 @@
 .page-template-flexible-content-page {
     section:not(.hero):not(.info-block):not(.call-to-action-alt) {
         margin: $size__component-padding;
-        overflow: hidden;
         padding-left: 1rem;
         padding-right: 1rem;
         position: relative;
